# ARDrone_Checkers

./: .gitignore  README.md  doc_git_recup_commit.odt
Client/: at_command.h  communication.c  communication.h  global.h  hello  keyboard.h  main.c  socket_tcp  socket_tcp.c  takeoff
Common/: log.c  log.h
Common/tests/: comp_log.bat  test_log.c
Embedded/: ReadMe
Embedded/Client/: Makefile.txt  at_command.c  at_command.h  communication.c  communication.h  global.h  keyboard.c  keyboard.h  main.c  navdata.h  supervisor.c  supervisor.h  takeoff
Embedded/Sources/: README.txt  a.out  at_command.c  at_command.h  calcul_distance.c  calcul_distance.h  calcul_order.c  calcul_order.h  calcul_tag.c  calcul_tag.h  calcul_tag.h~  communication.c  communication.h  detect_tag.cpp  detect_tag.cpp~  detect_tag.h  detect_tag.hpp  detect_tag.hpp~  detect_tag_interface.h~  detect_tag_interfae.cpp~  detect_tag_wrapper.cpp  detect_tag_wrapper.cpp~  detect_tag_wrapper.h  detect_tag_wrapper.h~  global.h  kbd_control.c  kbd_control.h  keyboard.c  keyboard.h  log.c  log.h  main.c  main.cpp  periodic.c  periodic.h  supervisor.c  supervisor.h  (+1 more)
Embedded/Sources/Detect/: CMakeLists.txt  detect.pro  detect_tag.cpp  detect_tag.h  main.cpp
Embedded/Sources/Detect/src/: detect_tag.cpp  detect_tag.cpp~  detect_tag.h  detect_tag.h~  main.cpp  main.cpp~
Sources/: .ardrone_testing_tool.c.swp  .take_off.c.swp  .take_off.h.swp  ardrone_testing_tool.c  take_off.c  take_off.h
Supervisor/: Data_communication.txt  Protocol_communication.odt  Protocole TCP.docx  ProtocoleTCP.docx  ~$otocole TCP.docx
(+66 files in other folders)
