cmake_minimum_required(VERSION 2.8)
    project( Detect )
    find_package( OpenCV REQUIRED )
    include_directories(${OpenCV_INCLUDE_DIRS})
#add_executable( Detect_lib src/detect_tag.cpp src/detect_tag.h )
    add_library( Detect src/detect_tag.cpp src/detect_tag.h )
    target_link_libraries( Detect ${OpenCV_LIBS} )
